@@ -103,7 +103,7 @@
     "no_syntax"
     "no_translations"
     "no_type_notation"
-    "nonterminals"
+    "nonterminal"
     "notation"
     "note"
     "notepad"
@@ -381,7 +381,7 @@
     "no_syntax"
     "no_translations"
     "no_type_notation"
-    "nonterminals"
+    "nonterminal"
     "notation"
     "notepad"
     "oracle"
